Closed Bug 1350564 Opened 7 years ago Closed 7 years ago

Crash in mozilla::dom::quota::UsageRequest::GetResult

Categories

(Core :: Storage: Quota Manager, defect)

55 Branch
Unspecified
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 57+ fixed
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 + fixed

People

(Reporter: calixte, Assigned: janv)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(2 files)

This bug was filed from the Socorro interface and is 
report bp-c3140866-5f90-4723-8adb-e5fcc2170324.
=============================================================

There are 2 crashes on nightly 55 with buildid 20170324030205. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1348660.

[1] https://hg.mozilla.org/mozilla-central/rev?node=ea3c6e12b49991ae80061d66dec24e28ccfeb237
Flags: needinfo?(jvarga)
I think I know what the problem is, let me fix it.
Blocks: 1354940
(In reply to Calixte Denizet (:calixte) from comment #0)
> There are 2 crashes on nightly 55 with buildid 20170324030205. In analyzing
Earliest build according to crash-stats is 20170323110205. Bug has been spotted on Windows 7/8.1/10 as well as Linux. According to the comments, users were able to reproduce this by accessing the site information panel or viewing the site certificate. I am able to reproduce this on my machine.
OS: Windows 10 → All
Version: 52 Branch → 55 Branch
There are also some crashes in mozilla::dom::quota::Request::GetResult that have similar stacks.
e.g. bp-e21344db-f2eb-49ec-8268-84a510170414
First report for that signature is build 20170329071901.
Crash Signature: [@ mozilla::dom::quota::UsageRequest::GetResult] → [@ mozilla::dom::quota::UsageRequest::GetResult] [@ mozilla::dom::quota::Request::GetResult ]
Tracking 55+ for this crash regression.
Attached patch patchSplinter Review
Assignee: nobody → jvarga
Flags: needinfo?(jvarga)
Attachment #8859034 - Flags: review?(btseng)
Comment on attachment 8859034 [details] [diff] [review]
patch

Review of attachment 8859034 [details] [diff] [review]:
-----------------------------------------------------------------

nice catch!
Attachment #8859034 - Flags: review?(btseng) → review+
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/65c632f7889f
Don't try to addref a null mResult in Request::GetResult and UsageRequest::GetResult (mResult can be null when mHaveResultOrErrorCode is true); r=btseng
https://hg.mozilla.org/mozilla-central/rev/65c632f7889f
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Attached patch patch for ESR52Splinter Review
Comment on attachment 8911854 [details] [diff] [review]
patch for ESR52

[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is needed for bug 1047098 which already has ESR52 approval.
User impact if declined: See bug 1047098.
Fix Landed on Version: 55
Risk to taking this patch (and alternatives if risky): Low
String or UUID changes made by this patch: None
Attachment #8911854 - Flags: approval-mozilla-esr52?
Comment on attachment 8911854 [details] [diff] [review]
patch for ESR52

Needed for the fix for bug 1047098 so let's take it for ESR 52.5.0.
Attachment #8911854 - Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
Note, this was marked unaffected, tweaking the flag as I guess the status changes as a result of the other uplifts to ESR52 for this bug.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: