Bug 1350564 - Don't try to addref a null mResult in Request::GetResult and UsageRequest::GetResult (mResult can be null when mHaveResultOrErrorCode is true); r=btseng